--- a/www/chart/index.html
+++ b/www/chart/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <div id="chart"></div>
+    <div id="tempChart"></div>
+    <p></p>
+    <div id="rhChart"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-<script src="script.js"></script>
+<script src="./app.js"></script>
 
 </html>
