update pm25 code

--- a/www/chart/index.html
+++ b/www/chart/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-    <div id="tempChart"></div>
-    <p></p>
-    <div id="rhChart"></div>
+    แสดงข้อมูลอุณหภูมิ
+    <div id="chartTemp"></div>
+    แสดงข้อมูล PM25
+    <div id="chartPm25"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 <script src="./app.js"></script>
